--- a/src/style.css
+++ b/src/style.css
@@ -1709,19 +1709,103 @@ main {
         width: 40%;
         height: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
+        flex-flow: column;
         overflow: hidden;
         background-size: cover;
+        position: relative;
         background-repeat: no-repeat;
         background-blend-mode: darken;
-        background-color: rgba(0, 0, 0, 0.5);
         background-position-x: center;
-        background-position-y: center; }
+        background-position-y: center;
+        /* &-photo {
+					width: 55%;
+					border-radius: 2px;
+					@include respond(tab-port) {
+						float: left;
+						position: relative;
+						width: 33.33%;
+						box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
+					}
+					&-p1 {
+						@include respond(tab-port) {
+							top: 0;
+							transform: scale(1.2);
+						}
+					}
+					&-p2 {
+						right: 0;
+						top: 2rem;
+						@include respond(tab-port) {
+							top: -1rem;
+							transform: scale(1.3);
+							z-index: 100;
+						}
+					}
+					&-p3 {
+						left: 20%;
+						top: 10rem;
+						@include respond(tab-port) {
+							top: 1rem;
+							left: 0;
+							transform: scale(1.1);
+						}
+					}
+					&:hover {
+						outline: 1.5rem solid $color-primary;
+						transform: scale(1.05) translateY(-0.5rem);
+						box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+						z-index: 20;
+					}
+				} */ }
         @media (max-width: 880px) {
           .event-mac-body-images {
             width: 100%;
-            height: 45%; } }
+            height: 45%;
+            flex-flow: row;
+            flex-wrap: wrap; } }
+        .event-mac-body-images__img {
+          object-fit: cover;
+          max-width: 85%;
+          max-height: 30%;
+          background: transparent;
+          transition: all var(--transition-time) ease-in-out;
+          /* &:nth-child(1) {
+						left: 7.5%;
+						top: 20%;
+						@include respond(tab){
+							left: 10%;
+							top: 40%;
+						}
+					}
+					&:nth-child(2) {
+						right: 2.5%;
+						top: 30%;
+						@include respond(tab){
+							right: 35%;
+							top: 25%;
+						}
+					}
+					&:nth-child(3) {
+						left: 10%;
+						top: 50%;
+						@include respond(tab){
+							left: 60%;
+							top: 40%;
+						}
+					} */ }
+          @media (max-width: 880px) {
+            .event-mac-body-images__img {
+              max-width: 25%;
+              max-height: 85%; } }
+          @media (max-width: 672px) {
+            .event-mac-body-images__img {
+              max-width: 50%;
+              max-height: 50%; } }
+          .event-mac-body-images__img:hover {
+            transform: scale(1.05) translateY(-0.5rem);
+            box-shadow: 0 2.5rem 4rem rgba(18, 18, 18, 0.5); }
         .event-mac-body-images__Img {
           object-fit: cover;
           max-width: 85%;
@@ -1806,6 +1890,7 @@ main {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 50;
   background-color: rgba(0, 0, 0, 0.9); }
   .all-events-container {
     width: 95%;
